--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "main.py",
       "use": "@vercel/python",
       "config": {
-        "installCommand": "pip install -r requirements.txt"
+        "installCommand": "npm install"
       }
     }
   ],
